--- a/assets/styles.css
+++ b/assets/styles.css
@@ -860,8 +860,9 @@ margin-right: -1vw;
     justify-content: center;
     color: black;
     font-family: 'Roboto Slab', serif;
-    margin-left: 70px;
-    margin-top: 0;
+    margin-left: -240px;
+    margin-top: -90px;
+
     
 }
 
@@ -881,7 +882,7 @@ margin-right: -1vw;
      font-weight: bold;
      font-size: 30px;
      margin-top: 55px;
-     margin-left: 550px;
+     margin-left: 570px;
      margin-bottom: 0;
      
      
