--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,7 +53,7 @@ margin-right: 1vw;
 text-transform: capitalize;
 }
 
-nav>ul>li>a {
+.header-container>ul>li>a {
      text-transform: uppercase;
      text-decoration: none;
      color:rgb(0, 0, 0);
@@ -65,7 +65,7 @@ nav>ul>li>a {
     padding: 2px;
 }
 
-nav>ul>li>a:hover {
+.header-container>ul>li>a:hover {
      text-decoration: underline;
      transition: all 0.3s ease;     
 }
