--- a/assets/styles.css
+++ b/assets/styles.css
@@ -877,23 +877,39 @@ margin-right: -1vw;
 
  
  
- .p1 {
+ .h1-gallery {
      font-family: roboto slab;
      font-weight: bold;
      font-size: 30px;
-     margin-top: 55px;
-     margin-left: 570px;
-     margin-bottom: 0;
+     text-align: center;
+     text-transform: uppercase;
+    }
      
      
- }
+    .nav2 .menu-nav ul{
+        display: flex;
+        text-transform: uppercase;    
+        list-style-type: none;
+        justify-content: center;
+    }
+    
+     .nav2 > ul > li + li {
+        padding-left: 30px;
+    }
+    
+     .nav2 > ul > li > a {
+        color: black;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 1rem;
+    }
 
  
- .p2 {
+ .h2-gallery {
      font-family: roboto slab;
      font-weight: bold;
      font-size: 22px;
-     margin-left: 115px;
+     text-align: center;
  }
 
 
