--- a/assets/styles.css
+++ b/assets/styles.css
@@ -748,8 +748,9 @@ margin-right: -1vw;
     border-width: 3px;
 }
 
-.footer-container>img{
+.footer-container>a img{
     margin-left: 30px;
+    margin-top:0;
 }
 
  .footer-col ul{
@@ -818,7 +819,7 @@ margin-right: -1vw;
  }
 
 #click-here{
-    padding-top: 20px;
+    padding-top: 70px;
 }
 
 .copyright{
