--- a/assets/reservation.css
+++ b/assets/reservation.css
@@ -122,6 +122,7 @@ text-transform: capitalize;
     padding: 30px 30px;
     margin-left: 400px;
     margin-bottom: 40px;
+    margin-top: 100px;
   }
 
   .content form .user-details{
