Buttons on footer fixed
Deleted unused files

--- a/assets/menu.css
+++ b/assets/menu.css
@@ -236,6 +236,28 @@ div > ul > li {
      flex-wrap:wrap;
  }
 
+ button {
+    font-size: 1rem;
+    font-weight: 300;
+     background-color: #F7F4E2;
+     border-style: groove;
+     border-radius: 50px;
+     height: 45px;
+     width: 200px;
+     text-transform: uppercase;
+     border-color:#C8AE67;
+     margin: 0 auto;
+
+}
+
+button:hover{
+     background-color: #cfcaae;
+     border-width: 2px;
+     transition: all 0.3s ease;
+     color:black;
+     cursor: pointer;
+}
+
  .footer-button{
     background-color: #F7F4E2;
     border: solid #ad9759 2px;
@@ -254,11 +276,6 @@ div > ul > li {
     font-family: roboto slab;
 }
 
-.footer-button:hover{
-    background-color: #ad9759;
-    font-size: 1.1rem;
-    border-width: 3px;
-}
 
 .footer-container>img{
     margin-left: 30px;
